patched pivot style to avoid unwanted text wrapping
git-svn-id: svn+ssh://rubyforge.org/var/svn/myexperiment/trunk@3191 4f7b4649-9ca9-420a-81b3-55a188e4d46f

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -2152,7 +2152,7 @@ table.topic td.tag_vote{
 }
 
 .pivot .label {
-  width: 92px;
+  width: 90px;
   overflow: hidden;
   display: inline-block;
 }
